--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@popperjs/core": "^2.11.8",
     "@types/react-slick": "^0.23.11",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "next": "13.5.6",
-    "react": "^18",
+    "popper.js": "^1.16.1",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
